--- a/app/app/globals.css
+++ b/app/app/globals.css
@@ -54,17 +54,21 @@
       rgba(1, 65, 255, 0.3)
     );
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
+
+    --border-bg: conic-gradient(
+      black, 
+      black, 
+      black, 
+      rgba(53, 53, 53, 0.356), 
+      grey, 
+      rgba(255, 255, 255, 0.719), 
+      grey, 
+      rgba(53, 53, 53, 0.356), 
+      black, 
+      black, 
+      black
     );
+
 
     --callout-rgb: 20, 20, 20;
     --callout-border-rgb: 108, 108, 108;
