--- a/app/app/globals.css
+++ b/app/app/globals.css
@@ -5,21 +5,21 @@
     'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground-rgb: 255, 255, 255;
+  --background-start-rgb: 0, 0, 0;
+  --background-end-rgb: 0, 0, 0;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
+  --primary-glow: radial-gradient(
+    rgba(1, 65, 255, 0.4),
+    rgba(0, 0, 0, 0.493),
+    rgba(0, 0, 0, 0.493),
+    rgb(0, 0, 0)
   );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
+  --secondary-glow: linear-gradient(
+    to bottom right,
+    rgba(1, 65, 255, 0.2),
+    rgba(1, 65, 255, 0.2),
+    rgba(1, 65, 255, 0.5)
   );
 
   --tile-start-rgb: 239, 245, 249;
@@ -34,47 +34,25 @@
     #00000080
   );
 
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+  --border-bg: conic-gradient(
+    black, 
+    black, 
+    black, 
+    rgba(53, 53, 53, 0.356), 
+    rgba(128, 128, 128, 0.596), 
+    rgba(255, 255, 255, 0.918), 
+    rgba(128, 128, 128, 0.596), 
+    rgba(53, 53, 53, 0.356), 
+    black, 
+    black, 
+    black
+  );
 
 
-    --border-bg: conic-gradient(
-      black, 
-      black, 
-      black, 
-      rgba(53, 53, 53, 0.356), 
-      rgba(128, 128, 128, 0.596), 
-      rgba(255, 255, 255, 0.918), 
-      rgba(128, 128, 128, 0.596), 
-      rgba(53, 53, 53, 0.356), 
-      black, 
-      black, 
-      black
-    );
-
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+  --callout-rgb: 20, 20, 20;
+  --callout-border-rgb: 108, 108, 108;
+  --card-rgb: 100, 100, 100;
+  --card-border-rgb: 200, 200, 200;
 }
 
 * {
@@ -87,6 +65,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family:  monospace;
 }
 
 body {
@@ -104,8 +83,6 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+html {
+  color-scheme: dark;
 }
