--- a/app/app/page.module.css
+++ b/app/app/page.module.css
@@ -4,7 +4,8 @@
   justify-content: space-between;
   align-items: center;
   padding: 6rem;
-  min-height: 100vh;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .enter span {
